Goethe add-exports check searches for both add-exports variations (#57)