@@ -16,6 +16,8 @@
 
 package com.palantir.goethe;
 
+import com.google.common.annotations.VisibleForTesting;
+import com.google.common.collect.ImmutableList;
 import java.lang.management.ManagementFactory;
 
 final class FormatterFacadeFactory {
@@ -29,8 +31,27 @@ final class FormatterFacadeFactory {
     }
 
     private static boolean currentJvmHasExportArgs() {
-        return ManagementFactory.getRuntimeMXBean()
-                .getInputArguments()
-                .containsAll(BootstrappingFormatterFacade.EXPORTS);
+        ImmutableList<String> arguments =
+                ImmutableList.copyOf(ManagementFactory.getRuntimeMXBean().getInputArguments());
+        return BootstrappingFormatterFacade.REQUIRED_EXPORTS.stream()
+                .allMatch(required -> hasExport(arguments, required));
+    }
+
+    @VisibleForTesting
+    static boolean hasExport(ImmutableList<String> arguments, String moduleAndPackage) {
+        String singleArgAddExport = "--add-exports=" + moduleAndPackage + "=ALL-UNNAMED";
+        String multiArgAddExport = moduleAndPackage + "=ALL-UNNAMED";
+        for (int i = 0; i < arguments.size(); i++) {
+            String argument = arguments.get(i);
+            if (singleArgAddExport.equals(argument)) {
+                return true;
+            }
+            if (multiArgAddExport.equals(argument)) {
+                if (i > 0 && "--add-exports".equals(arguments.get(i - 1))) {
+                    return true;
+                }
+            }
+        }
+        return false;
     }
 }
